[gd_scene load_steps=7 format=3 uid="uid://dn2dsrk7fopxj"]

[ext_resource type="Script" uid="uid://c7ea4wkj62w4j" path="res://Scripts/Test/test_lobby_ui.gd" id="1_tqbbv"]

[sub_resource type="Theme" id="Theme_xlkc2"]
default_font_size = 100

[sub_resource type="Theme" id="Theme_tqbbv"]
default_font_size = 50

[sub_resource type="Animation" id="Animation_tqbbv"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("selectMode:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("matchPrepare:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_t8aww"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("selectMode:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("matchPrepare:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3xikl"]
_data = {
&"RESET": SubResource("Animation_t8aww"),
&"fade_out": SubResource("Animation_tqbbv")
}

[node name="TestLobbyUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tqbbv")

[node name="selectMode" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="selectMode"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 500
alignment = 1

[node name="2P" type="Button" parent="selectMode/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme = SubResource("Theme_xlkc2")
text = "2 Player"

[node name="Bot" type="Button" parent="selectMode/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme = SubResource("Theme_xlkc2")
text = "Bot"

[node name="matchPrepare" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="matchPrepare"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 250
alignment = 1

[node name="readyP1" type="RichTextLabel" parent="matchPrepare/HBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme = SubResource("Theme_tqbbv")
bbcode_enabled = true
text = "Not Ready"
horizontal_alignment = 1
vertical_alignment = 1

[node name="start_time" type="RichTextLabel" parent="matchPrepare/HBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(100, 500)
layout_mode = 2
theme = SubResource("Theme_tqbbv")
bbcode_enabled = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1

[node name="readyP2" type="RichTextLabel" parent="matchPrepare/HBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme = SubResource("Theme_tqbbv")
bbcode_enabled = true
text = "Not Ready"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="matchPrepare"]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3xikl")
}

[connection signal="pressed" from="selectMode/HBoxContainer/2P" to="." method="_on_p_pressed"]
[connection signal="pressed" from="selectMode/HBoxContainer/Bot" to="." method="_on_bot_pressed"]
[connection signal="timeout" from="matchPrepare/Timer" to="." method="_on_timer_timeout"]
